--- a/package.json
+++ b/package.json
@@ -14,17 +14,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/clipboard": "^1.5.35",
-    "@types/axios": "^0.14.0",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
-    "csv-loader": "^2.1.1",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
@@ -32,8 +28,7 @@
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.1",
     "webpack-dev-server": "^2.9.4",
-    "webpack-merge": "^4.1.1",
-    "xml-loader": "^1.2.1"
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "axios": "^0.17.1",
