add options page entry from popup.html

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,9 @@
 {
   "name": "Copy Password",
-  "options_page": "options.html",
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
   "background": {
     "page": "background.html"
   },
@@ -12,7 +15,8 @@
     "128": "folder-128.png"
   },
   "permissions": [
-    "http://localhost/"
+    "http://localhost/",
+    "storage"
   ],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
