--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bulma": "^0.6.1",
-    "clipboard": "^1.7.1"
+    "clipboard": "^1.7.1",
+    "rxjs": "^5.5.2"
   }
 }
